# my-new-project

./: .env.example  .gitignore  Makefile  README.md  api.py  rag_system.py  requirements.txt  test_rag.py
.github/workflows/: apisec-scan.yml  codacy.yml  codeql.yml
RAG_For_Data_AI/: RAG 
backend/: Dockerfile.dev  Dockerfile.test  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: health.py
backend/app/api/v1/endpoints/: chat.py  connection_manager.py  documents.py  queries.py
backend/app/auth/: __init__.py  auth.py
backend/app/core/: config.py  document_processor.py  security.py  utils.py  vector_store.py
backend/app/crud/: __init__.py  base.py  user.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  conversation.py  document.py  message.py  query.py  user.py
backend/app/routers/: __init__.py  auth.py  rag.py  users.py
backend/app/schemas/: __init__.py  auth.py  chat.py  document.py  query.py  rag.py  user.py
backend/app/scripts/: create_admin.py
backend/app/services/: rag_service.py
backend/scripts/: init_db.py  migrate_db.py  run_dev.sh  start.sh
frontend/: Dockerfile.dev  Dockerfile.test  package.json
frontend/src/: App.js  index.js
frontend/src/components/: Layout.js
frontend/src/contexts/: AuthContext.js
frontend/src/pages/: DashboardPage.js  DocumentsPage.js  LoginPage.js  QueryPage.js  RegisterPage.js  SettingsPage.js
frontend/src/services/: api.js
